7.x-1.13.x
 - #1786 Add hook to auto-assign editors the og administrator role.
 - #1781 Update views to 3.15 and remove patch 1388684.
 - #1751 Add POD validation link to command center menu for site manager access.
 - #1762 Re-number update hooks that were mixed up during release integration.
 - #1709 Changed function dkan sitewide conversion homepage to fix problem with link entity attribute. This attribute need to be a boolean.
 - #1742 Fix home page HTML <head><title> so that it's just the site name (not the node or panel title)
 - #1747 Update DKAN API link to use the RTD documentation page.
 - #1730 Fix logic error for front page in theme causing error messages on homepage
 - #1728 Added a tag @defaultHomepage to a topic test which relies on homepage content.
 - #5807 Fix panelizer permissions to hide 'Customize Display' button

7.x-1.13
--------------------------
 - #1719 Added site details to settings nuboot_radix to allow change site name, slogan, e-amail address for site manager.
 - #1717 Upgrading Drupal to 7.54
 - #1705 Added css for chart visualizaitons, fixes issue in IE.
 - #1695 Upgrade better_exposed_filters to v3.4.
 - #1702 Update branding.
 - #1369 Added ReadTheDocs integrations and docs folder for centralized documentation
 - #1701 Renamed test files.
 - #1691 #1682 Update resource tests to work with client site variations.
 - #1694 Moved functions from FeatureContext to DKANExtension.
 - #1687 Added a function in dkan_sitewide to check if a specific page is the front page.
 - #1693 Improve module and user cleanup inside dkan workflow context after run tests
 - #1669 Update leaflet library to v1.0.2 and leaflet markercluster to v1.0.0. Unift leaflet libraries (was using a separate version for recline module)
 - #1684 Security update for autocomplete_deluxe
 - #1670 Upgraded to new 1.0 release of Visualization Entity module