@@ -48,6 +48,9 @@ features[features_api][] = api:2
 features[field_base][] = field_image
 features[field_base][] = group_group
 features[field_base][] = og_group_ref
+features[field_group][] = group_tab_about|node|group|default
+features[field_group][] = group_tab_about|node|group|form
+features[field_group][] = group_tabs|node|group|form
 features[field_instance][] = node-dataset-og_group_ref
 features[field_instance][] = node-group-body
 features[field_instance][] = node-group-field_image
