@@ -268,8 +268,8 @@
 }
 
 // Dataset page Group block.
-.radix-layouts-sidebar .pane-block.pane-views-group-block-block .pane-content {
-  padding: 0 15px;
+.node-type-group .radix-bryant .radix-layouts-sidebar .pane-block.pane-views-group-block-block .pane-content {
+  padding: 15px 15px 0;
 }
 
 #block-dkan-dataset-dkan-dataset-dataset-help {
